@@ -1,5 +1,5 @@
 // this component will load in the correct logo type and give the user to choose the color and size
-import Backslash from '../Utilities/Backslash'
+import Backslash from '../../Utilities/Backslash'
 import ColorChoice from './ColorChoice'
 import Sizes from './Sizes'
 import colors from '@/constants/colors'
