@@ -1,13 +1,0 @@
-import React from 'react'
-import Product from '@/components/Products/Product'
-import Store from '../components/Store/Store'
-
-export default function StorePage() {
-  return (
-    <div className="flex flex-col items-center justify-center px-4 py-32">
-      {/* temporary */}
-      {/* <Product /> */}
-      <Store />
-    </div>
-  )
-}
