@@ -1,2 +1,4 @@
-- line 238 inside ./components/Products/Products.jsx file someone needs to write a better description, highlights and details about the t-shirt.
-- need to add our own t-shirts rather than the placeholder images
+[] - line 238 inside ./components/Products/Products.jsx file someone needs to write a better description, highlights and details about the t-shirt.
+[] - need to add our own t-shirts rather than the placeholder images
+[] - change banner hover x button color from purple to something else
+[] - need to change vision document to make it look a little more appealing.
